Adiciona comentários, barra de interação, imagem e setas de mudança de imagem, resolve problema de overflow na tela

--- a/post.css
+++ b/post.css
@@ -16,6 +16,10 @@ p{
     text-align:left;
 }
 
+/* containers */
+#main-overlay{
+    flex-direction: column;
+}
 
 #menu-overlay{
     /* as informações foram retiradas e modificadas de https://www.w3schools.com/howto/howto_css_overlay.asp */
@@ -31,6 +35,7 @@ p{
     flex-direction: row;
     align-items: center;
 }
+
 .menu-container{
     display: inline;
     flex-direction: row;
@@ -43,6 +48,37 @@ p{
     flex:1 1 20%;
 }
 
+.inner-flexbox{
+    display:flex;
+    flex-direction: row;
+    gap: 0.1vw;
+}
+
+#interaction-bar{
+    margin-left: auto;
+    width: 95%;
+    align-self: center;
+    display:flex;
+    flex-direction:row;
+    gap: 0.3vw;
+    justify-items: space-evenly;
+    align-items: center;
+    border-top: 1px solid #3E4042;
+    border-bottom: 1px solid #3E4042;
+}
+#comments-comparts{
+    margin-left:auto;
+    width: 100%;
+    display:flex;
+    flex-direction:row;
+    gap: -1vw;
+    justify-items:flex-start;
+    align-items: center;
+    padding-bottom:0.3vh;
+}
+.inner-right-content{
+    margin-left:auto;
+}
 .first-column-menu{
     justify-content: left;
     display: flex;
@@ -85,26 +121,36 @@ p{
 #view-flexbox{
     display: flex; 
     flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: stretch;
-    width: 100vw; /* Full width (cover the whole page) */
-    height: 100vh;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%;
 }
 
+/* serão 5 colunas no menu divididas igualmente, o post, como visto no teste no monitor, é dividido em 5 colunas, sendo que as 4 primeiras são ocupadas pela imagem e a última é ocupada pelo "post" */
+/* no "menu", as 5 colunas são divididas da seguinte maneira: a primeira coluna tem o X e o logo do facebook, 2 colunas vazia, 1 coluna com as opções de iamgem e 1 coluna com as opções do facebook */
+
+
 #main-col{
-    flex:4.35;
+    flex:4.35; 
     width:100%;
-    height: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
 }
 
 #secondary-col{
     background-color: #242526;
     flex:1;
     width:100%;
-    height:100%;
+    height:100vh;
+    overflow:hidden;
 }
 
 .post{
+    display: block;
     flex-direction: column;
 }
 
@@ -149,7 +195,8 @@ p{
 }
 
 #post-content{
-    padding: 0.6vh 0.9vw 0.6vh 1vw;
+    padding: 0.6vh 0.2vw 0.6vh 1vw;
+    margin: 0 0 4vh 0;
 
 }
 
@@ -161,6 +208,10 @@ p{
     height: 100%;
 }   
 
+.text-grey{
+    font-size:15px;
+    color: #B0B3B8;
+}
 #see-more{
     margin-left: auto;
 }
@@ -172,6 +223,86 @@ p{
 #user-title:hover{
     text-decoration: underline solid rgb(228, 230, 235);
 }
-/* serão 5 colunas no menu divididas igualmente, o post, como visto no teste no monitor, é dividido em 5 colunas, sendo que as 4 primeiras são ocupadas pela imagem e a última é ocupada pelo "post" */
-/* no "menu", as 5 colunas são divididas da seguinte maneira: a primeira coluna tem o X e o logo do facebook, 2 colunas vazia, 1 coluna com as opções de iamgem e 1 coluna com as opções do facebook */
 
+.button-grey:hover{
+    background:  #3E4042;
+    border-radius:5px;
+}
+
+.comments-aglomeration-container{
+    display:flex;
+    flex-direction:column;
+    justify-content: flex-start;
+}
+
+.comment-outer-container{
+    display:flex;
+    flex-direction: row;
+    gap: 0.2vw;
+    justify-content: flex-start;
+    padding-top: 1.5vh;
+    padding-left:0.5vw;
+    padding-bottom: 1.5vh;
+}
+
+.comment-inner-text-container{
+    display:flex;
+    flex-direction: column;
+    background:  #3E4042;
+    border-radius: 30px;
+    padding: 0.5vw;
+    margin: -0.4vh;
+    justify-content: center;
+    width: 85%
+}
+
+.create-a-comment-container{
+    display:flex;
+    flex-direction: row;
+}
+
+.image-change-arrow{
+    width: 2vw;
+    height: 2vh;
+    margin: 2vh;
+    padding: 1vh;
+}
+
+.image-change-arrow:hover{
+    background-color: #242526;
+    border: 3px solid   #242526;
+}
+
+.circle-icon:hover{
+    background-color: #B0B3B8;
+    border: 3px solid   #B0B3B8;
+}
+
+.comment-user-name{
+    font-size: 13px;
+    font-weight: bold;
+    color: white;
+    margin-bottom: -0.5vh;
+    padding: 5px;
+}
+.comment-user-photo{
+    margin-right: auto;
+}
+.comment-user-name:hover{
+        text-decoration: underline solid rgb(176, 179, 184); /* retirado do facebook, sabendo da função hover do css */
+}
+
+.comment{
+    padding: 5px;
+    margin-top: -0.3vh;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+#write-a-comment{
+        width: 80%;
+        border-radius: 30px;
+        border: 1px solid #3A3B3C;
+        color:#9EA1A6;
+        background: #3A3B3C;
+}
